# file-agent

./: .gitignore  CLAUDE.md  Cargo.toml  raworc.json
src/: agent.rs  lib.rs  main.rs  tool.rs  utils.rs
src/agents/: mod.rs
src/agents/file/: agent.rs  claude.rs  context_manager.rs  mod.rs
src/agents/file/tools/: bash.rs  edit.rs  find.rs  glob.rs  grep.rs  ls.rs  mod.rs  multi_edit.rs  read.rs  todo_write.rs  write.rs
src/agents/orchestrator/: claude.rs  mod.rs
