[package]
name = "file-agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

# File operations dependencies
futures = "0.3"
once_cell = "1.21.3"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
rand = "0.8"
url = "2.5"
regex = "1.10"
async-trait = "0.1"
walkdir = "2.5"
glob = "0.3"
fs_extra = "1.3"

