[package]
name = "file-agent"
version = "0.1.0"
edition = "2021"
description = "Intelligent file operations: read, write, search, analyze, manage directories"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# File operations dependencies
futures = "0.3"
regex = "1.10"
async-trait = "0.1"
walkdir = "2.5"
glob = "0.3"